[package]
name = "rusty_pinger"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
surge-ping = "0.7.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
ctrlc = { version = "3.4.4", features = ["termination"] }
futures = "0.3.30"
rand = "0.8.5"